--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Music App" />
+    <meta name="title" property="og:title" content="Music App" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/74302233/120834074-3a95cb00-c56b-11eb-81e8-698f1c7ff60e.png">
+    <meta name="description" property="og:description" content="Music App">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Music App</title>
   </head>
   <body>
     <div id="root"></div>
