--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Music Discovery Tool" />
-    <meta name="title" property="og:title" content="Music App" />
-    <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/74302233/120834074-3a95cb00-c56b-11eb-81e8-698f1c7ff60e.png"/>
-    <meta name="description" property="og:description" content="Music Discovery Tool"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:site_name" content="Music App">
+    <meta property="og:title" content="Music Discovery Tool" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://music-search-app.netlify.app/">
+    <meta name="description" content="Find bands and artists you love with just a few quick taps">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/74302233/120891736-d3cbec80-c612-11eb-928c-8a9f681a3243.png">
     <title>Music App</title>
   </head>
   <body>
