--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://music-search-app.netlify.app/">
     <meta name="description" content="Find bands and artists you love with just a few quick taps">
     <meta property="og:image" content="https://user-images.githubusercontent.com/74302233/120891736-d3cbec80-c612-11eb-928c-8a9f681a3243.png">
-    <title>Music App</title>
+    <title>Music Discovery Tool</title>
   </head>
   <body>
     <div id="root"></div>
