--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:site_name" content="Music App">
+    <meta property="og:site_name" content="https://music-search-app.netlify.app">
     <meta property="og:title" content="Music Discovery Tool" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://music-search-app.netlify.app/">
